test/src/e2e_vm_tests/test_programs/should_fail/recover_invalid_items/src/main.sw
script;

random_words

f9

fn main() {
}
